# CovidDashboard

./: README.md  requirements.txt  setup.cfg
src/web/: app.py  generate_pdf.py  local_storage.py  style.css
