[metadata]
name = my_package
version = attr: my_package.VERSION
author = <name>
author_email = <email>
description = My package description


[options]
packages = find:
include_package_data = True

[options.packages.find]
where=src
include=lib,web
exclude =
  test

[mypy]
files=src
ignore_missing_imports=true

[tool:pytest]
testpaths=
  test
